Renamed infinitescroll.js to knockout-js-infinite-scroll.js and fixed travis/karma/coveralls tests and logging

--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,9 @@
     "scroll"
   ],
   "version": "0.1.0",
-  "main": "infinitescroll.js",
+  "main": "knockout-js-infinite-scroll.js",
   "dependencies": {
+  	"knockout": "~3.2.0"
   },
   "devDependencies": {
     "mocha": "~1.18",
