--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
   "name": "knockout-js-infinite-scroll",
+  "description": "Knockout JS (KO) extender that provides infinite scroll functionality to an observable array by automatically filtering it down to only the items visible on screen.",
+  "author": "Baz <bk@thinkloop.com>",
   "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/thinkloop/knockout-js-infinite-scroll.git"
+  },
+  "license": "MIT",
+  "main": "knockout-js-infinite-scroll.js",
   "devDependencies": {
-    "karma-coffee-preprocessor": "~0.1",
-    "karma-mocha": "0.1.1",
-    "karma-coverage": "karma-runner/karma-coverage#a35d8d068ef",
-    "karma": "0.10.9",
-    "karma-coveralls": "~0.1.4"
+    "karma": "~0.12.21",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma-coverage": "git://github.com/karma-runner/karma-coverage#a35d8d068ef",
+    "karma-coveralls": "^0.1.4",
+    "karma-mocha": "~0.1.7",
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "scripts": {
-    "test": "./node_modules/.bin/karma start karma.conf.js"
-  }
+    "test": "node ./node_modules/karma/bin/karma start karma.conf.js"
+  },
+  "keywords": [
+    "knockout",
+    "ko",
+    "infinite",
+    "scroll"
+  ]
 }
