--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - npm install
 
 script:
-  - ./node_modules/.bin/karma start --single-run --browsers PhantomJS
+  - ./node_modules/karma/bin/karma start --single-run --browsers PhantomJS
